refactor: update controller tests to use DTOs and mappers